small refactors added PBLCreateTask.html for a repl embed (PBL)

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,7 @@ Werkzeug
 flask_login
 Flask
 numpy
-flask-sqlalchemy
+flask-sqlalchemy==2.1.0
 flask_migrate
 flask_restful
-numpy
-
-pathlib
-palindrome
+numpy~=1.21.4
