--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,10 @@ Werkzeug
 flask_login
 Flask
 numpy
-flask-sqlalchemy==2.1.0
+flask-sqlalchemy
 flask_migrate
 flask_restful
-numpy~=1.21.4
+numpy
+
+pathlib
+palindrome
